data/all_generated_tests/raw_wast_tests/nop_StackCorruption_140.wast
;; 1. **Test Description**:     Place a `nop` instruction immediately following a function call with multiple parameters. Verify if the stack correctly preserves the function's return values without any corruption after the `nop` instruction.    **Constraint Checked**: Ensures `nop` does not alter the stack state after a function call.    **Relation to Stack Corruption**: Incorrect stack handling could lead to return values being misplaced or lost.

(assert_invalid
  (module 
    (func $multi-param (param i32 i32 i32) (result i32) (i32.add (local.get 0) (local.get 1)) (i32.add (local.get 2)))
    (func $test
      (call $multi-param (i32.const 1) (i32.const 2) (i32.const 3))
      (nop)
    )
  )
  "type mismatch"
)